--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "filmflix",
   "version": "0.1.0",
-  "homepage": "https://Gabrielspaiva.github.io/popularish",
+  "homepage": "https://GabrielsPaiva.github.io/popularish",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
